[gd_scene load_steps=5 format=2]

[ext_resource path="res://Experiments/ElementBending/Sprites/spr_water_ball.png" type="Texture" id=1]
[ext_resource path="res://Experiments/ElementBending/Objects/WaterPunch/WaterPunch.gd" type="Script" id=2]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -11.6626, 46.3793, -18.1354, 11.7434, 18.1354, -11.7434, 36.4039, 37.4978, 0, 0, 0, 0, 61.5259, 7.76759 )
}

[sub_resource type="CapsuleShape2D" id=2]
radius = 11.7516
height = 45.2882

[node name="WaterPunch" type="Node2D"]
script = ExtResource( 2 )

[node name="Path2D" type="Path2D" parent="."]
position = Vector2( 11.5817, -46.5495 )
curve = SubResource( 1 )

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2( -11.6626, 46.3793 )
rotation = 0.0567889
loop = false

[node name="PunchArea" type="Area2D" parent="Path2D/PathFollow2D"]
position = Vector2( 0.0904741, 0.165328 )
rotation = -0.0567917
collision_layer = 4
collision_mask = 9

[node name="HitBoxCollision" type="CollisionShape2D" parent="Path2D/PathFollow2D/PunchArea"]
position = Vector2( -0.561867, 0.561867 )
rotation = 1.44339
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="Path2D/PathFollow2D/PunchArea"]
modulate = Color( 1, 1, 1, 0.501961 )
texture = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
